--- a/CameraFilter/Base.lproj/Main.storyboard
+++ b/CameraFilter/Base.lproj/Main.storyboard
@@ -24,6 +24,9 @@
                             <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="OU4-qG-i7g">
                                 <rect key="frame" x="168" y="701.5" width="78" height="30"/>
                                 <state key="normal" title="Apply Filter"/>
+                                <connections>
+                                    <action selector="applyFilterButtonPressed" destination="BYZ-38-t0r" eventType="touchUpInside" id="l26-rw-PfW"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
